fixed css align

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -21,3 +21,8 @@
 .board-list:hover {
     opacity: 0.75;
 }
+
+.board-title {
+    display: flex;
+    align-items: center;
+}
